{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 111,
  "lineage": "8f870cef-faa7-2f66-31ce-38aa22ad941c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fbedfa0612d6cb4",
            "associate_with_private_ip": "10.0.1.19",
            "association_id": "eipassoc-0a7659662709fefb9",
            "domain": "vpc",
            "id": "eipalloc-01fbedfa0612d6cb4",
            "instance": "i-0f964ef26f3cb5675",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e5676a11d891489",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-52-44-102-179.compute-1.amazonaws.com",
            "public_ip": "52.44.102.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_internet_gateway.terra_IGW",
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:914209118176:instance/i-0f964ef26f3cb5675",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f964ef26f3cb5675",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "griskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04e5676a11d891489"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e5676a11d891489",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068e1897b65a50b20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0204e108e7746e7",
            "tags": {
              "name": "web_server"
            },
            "tags_all": {
              "name": "web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05bc242975964ffd8"
            ]
          },
          "dependencies": [
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:internet-gateway/igw-0df740229e1d3d688",
            "id": "igw-0df740229e1d3d688",
            "owner_id": "914209118176",
            "tags": {
              "name": "my_IGW"
            },
            "tags_all": {
              "name": "my_IGW"
            },
            "vpc_id": "vpc-054ad53377d05d7e1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terra_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:network-interface/eni-04e5676a11d891489",
            "id": "eni-04e5676a11d891489",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:99:20:fb:be:19",
            "owner_id": "914209118176",
            "private_ip": "10.0.1.19",
            "private_ip_list": [
              "10.0.1.19"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.19"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05bc242975964ffd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0204e108e7746e7"
          },
          "dependencies": [
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df740229e1d3d688",
            "id": "r-rtb-024821bb80d1a40721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024821bb80d1a4072",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_IGW",
            "aws_route_table.terra_route_table",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:route-table/rtb-024821bb80d1a4072",
            "id": "rtb-024821bb80d1a4072",
            "owner_id": "914209118176",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "my_route_table"
            },
            "tags_all": {
              "name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ad53377d05d7e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aebff8cb5977bfab",
            "route_table_id": "rtb-024821bb80d1a4072",
            "subnet_id": "subnet-0d0204e108e7746e7"
          },
          "dependencies": [
            "aws_route_table.terra_route_table",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:security-group/sg-05bc242975964ffd8",
            "description": "security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bc242975964ffd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "914209118176",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_web"
            },
            "tags_all": {
              "name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ad53377d05d7e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:subnet/subnet-0d0204e108e7746e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0204e108e7746e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914209118176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "my_subnet"
            },
            "tags_all": {
              "name": "my_subnet"
            },
            "vpc_id": "vpc-054ad53377d05d7e1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914209118176:vpc/vpc-054ad53377d05d7e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4817a0aa17f6e2b",
            "default_route_table_id": "rtb-0e87ab790d6c9d53e",
            "default_security_group_id": "sg-0feb51307edb8cb37",
            "dhcp_options_id": "dopt-0065580ae2b69fc24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054ad53377d05d7e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e87ab790d6c9d53e",
            "owner_id": "914209118176",
            "tags": {
              "name": "my_vpc"
            },
            "tags_all": {
              "name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}